commit working s3-rest-service